--- a/blocks/place/__title/place__title.css
+++ b/blocks/place/__title/place__title.css
@@ -12,6 +12,7 @@
 
 @media (max-width: 1024px) {
     .place__title {
+        width: 330px;
         font-style: normal;
         font-weight: 900;
         font-size: 42px;
@@ -21,6 +22,7 @@
 
 @media (max-width: 768px) {
     .place__title {
+        width: 100%;
         font-style: normal;
         font-weight: 900;
         font-size: 32px;
