--- a/blocks/cover/cover.css
+++ b/blocks/cover/cover.css
@@ -1,6 +1,7 @@
 .cover {
     width: 1184px;
     height: 740px;
+    object-fit: cover;
 
     margin: 0 auto 92px;
 
@@ -14,7 +15,7 @@
     text-decoration: none;
 
     background: url(../../images/__background.jpg) center no-repeat;
-    background-size: contain;
+    background-size: cover;
 
     position: relative;
 }
@@ -40,14 +41,14 @@
 
 @media (max-width: 1280px) {
     .cover {
-        width: 1024px;
+        width: 100%;
         height: 640px;
     }
 }
 
 @media (max-width: 1024px) {
     .cover {
-        width: 768px;
+        width: 100%;
         height: 480px;
         margin: 0 auto 88px;
     }
@@ -55,7 +56,15 @@
 
 @media (max-width: 768px) {
     .cover {
-        width: 320px;
+        width: 100%;
+        height: 300px;
+        margin: 0 auto 64px;
+    }
+}
+
+@media (max-width: 450px) {
+    .cover {
+        width: 100%;
         height: 200px;
         margin: 0 auto 64px;
     }
