--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -16,14 +16,14 @@
 
 @media (max-width: 1280px) {
     .header {
-        width: 1024px;
+        width: 100%;
         margin-bottom: 48px;
     }
 }
 
 @media (max-width: 1024px) {
     .header {
-        width: 768px;
+        width: 100%;
         padding: 0 24px;
         margin-bottom: 48px;
     }
@@ -31,7 +31,7 @@
 
 @media (max-width: 768px) {
     .header {
-        width: 320px;
+        width: 100%;
         padding: 0 16px;
         margin-bottom: 48px;
     }
