--- a/blocks/intro/intro.css
+++ b/blocks/intro/intro.css
@@ -1,30 +1,28 @@
 .intro {
     width: 1280px;
     margin: 0 auto 92px;
-    padding: 0 148px;
+    padding-left: 148px;
 
     box-sizing: border-box;
 }
 
 @media (max-width: 1280px) {
     .intro {
-        width: 1024px;
-        padding: 0 48px;
+        width: calc(100% - 48px * 2);
+        padding: 0;
     }
 }
 
 @media (max-width: 1024px) {
     .intro {
-        width: 768px;
-        padding: 0 24px;
+        width: calc(100% - 24px * 2);
         margin-bottom: 88px;
     }
 }
 
 @media (max-width: 768px) {
     .intro {
-        width: 320px;
-        padding: 0 16px;
+        width: calc(100% - 16px * 2);
         margin-bottom: 64px;
     }
 }
