--- a/blocks/lead/__caption/lead__caption.css
+++ b/blocks/lead/__caption/lead__caption.css
@@ -1,4 +1,6 @@
 .lead__caption {
+    box-sizing: border-box;
+    
     font-style: normal;
     font-weight: 400;
     font-size: 10px;
@@ -15,7 +17,7 @@
 
 @media (max-width: 1280px) {
     .lead__caption {
-        padding: 0 48px;
+        /* padding: 0 48px; */
     }
 }
 
