--- a/blocks/lead/__title/lead__title.css
+++ b/blocks/lead/__title/lead__title.css
@@ -4,7 +4,7 @@
     font-size: 96px;
     line-height: 100px;
 
-    width: 720px;
+    max-width: 720px;
     margin: 0 auto 32px;
     padding: 0;
 
@@ -25,7 +25,7 @@
 
 @media (max-width: 768px) {
     .lead__title {
-    width: 288px;
+    max-width: 288px;
 
     margin-bottom: 16px;
     
