--- a/blocks/lead/lead.css
+++ b/blocks/lead/lead.css
@@ -1,25 +1,24 @@
 .lead {
-    width: 984px;
+    width: calc(1280px - 148px * 2);
     margin: 0 auto 92px;
 }
 
 @media (max-width: 1280px) {
     .lead {
-        width: 1024px;
+        width: calc(100% - 48px * 2);
     }
 }
 
 @media (max-width: 1024px) {
     .lead {
-        width: 768px;
-
+        width: 100%;
         margin: 0 auto 88px;
     }
 }
 
 @media (max-width: 768px) {
     .lead {
-        width: 320px;
+        width: 100%;
         margin: 0 auto 64px ;
     }
 }
