--- a/blocks/photo-grid/photo-grid.css
+++ b/blocks/photo-grid/photo-grid.css
@@ -5,43 +5,41 @@
     gap: 16px;
 
     grid-template-columns: repeat(4, 1fr);
-    grid-auto-rows: 213px;
+    grid-auto-rows: max-content;
 
-    width: 1280px;
+    width: calc(100% - 48px * 2);
     margin: 0 auto 92px;
-    padding: 0 48px;
+    /* padding: 0 48px; */
 }
 
 @media (max-width: 1280px) {
     .photo-grid {
-        width: 1024px;
+        width: calc(100% - 48px * 2);
 
         grid-template-columns: repeat(3, 1fr);
-        grid-auto-rows: 225px;
 
+        padding: 0;
         gap: 14px;
     }
 }
 
 @media (max-width: 1024px) {
     .photo-grid {
-        width: 768px;
-        padding: 0 24px;
+        width: calc(100% - 24px * 2);
+        padding: 0;
         margin-bottom: 88px;
 
         grid-template-columns: repeat(2, 1fr);
-        grid-auto-rows: 264px;
     }
 }
 
 @media (max-width: 768px) {
     .photo-grid {
-        width: 320px;
-        padding: 0 16px;
+        width: calc(100% - 16px * 2);
         margin-bottom: 64px;
+        padding: 0;
 
-        grid-template-columns: repeat(1, 1fr);
-        grid-auto-rows: 216px;
+        grid-template-columns: repeat(auto-fit, minmax(240px, 1fr));
 
         gap: 12px;
     }
