--- a/blocks/place/__title/place__title.css
+++ b/blocks/place/__title/place__title.css
@@ -1,6 +1,8 @@
 .place__title {
     width: 460px;
 
+    box-sizing: border-box;
+
     font-style: normal;
     font-weight: 900;
     font-size: 72px;
