--- a/blocks/place/place.css
+++ b/blocks/place/place.css
@@ -1,21 +1,25 @@
 .place {
     display: grid;
+    width: 100%;
 
     gap: 48px 40px;
 
     grid-template-columns: 460px 484px;
+
+    justify-content: center;
 }
 
 @media (max-width: 1280px) {
     .place {
-        grid-template-columns: 440px 456px;
+        grid-template-columns: 440px 1fr;
+        width: 100%;
         gap: 48px 32px;
     }
 }
 
 @media (max-width: 1024px) {
     .place {
-        grid-template-columns: 340px 352px;
+        grid-template-columns: 340px 1fr;
         gap: 48px 28px;
         
     }
@@ -23,7 +27,16 @@
 
 @media (max-width: 768px) {
     .place {
-        grid-template-columns: 320px;
+        grid-template-columns: .7fr;
+        justify-content: center;
+        gap: 32px;
+        
+    }
+}
+
+@media (max-width: 450px) {
+    .place {
+        grid-template-columns: 1fr;
         gap: 32px;
         
     }
