--- a/blocks/places/places.css
+++ b/blocks/places/places.css
@@ -11,13 +11,13 @@
 
 @media (max-width: 1280px) {
     .places {
-        width: 1024px;
+        width: calc(100% - 48px * 2);
     }
 }
 
 @media (max-width: 1024px) {
     .places {
-        width: 768px;
+        width: calc(100% - 24px * 2);
         gap: 73px;
         margin: 0 auto 88px;
     }
@@ -25,7 +25,7 @@
 
 @media (max-width: 768px) {
     .places {
-        width: 320px;
+        width: 100%;
         gap: 50px;
         margin: 0 auto 64px;
     }
