--- a/styles/index.css
+++ b/styles/index.css
@@ -1,5 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;700;900&display=swap');
-
 @import url(../blocks/page/page.css);
 
 @import url(../blocks/header/header.css);
@@ -48,7 +46,21 @@
 
 
 
+@font-face {
+    src: url(../fonts/Inter-Regular.ttf) format("truetype");
+    font-family: 'Inter';
+    font-weight: 400;
+}
 
+@font-face {
+    src: url(../fonts/Inter-Bold.ttf) format("truetype");
+    font-family: 'Inter';
+    font-weight: 700;
+}
 
-
+@font-face {
+    src: url(../fonts/Inter-Black.ttf) format("truetype");
+    font-family: 'Inter';
+    font-weight: 900;
+}
 
