--- a/blocks/cover/__subtitle/cover__subtitle.css
+++ b/blocks/cover/__subtitle/cover__subtitle.css
@@ -1,7 +1,7 @@
 .cover__subtitle {
     z-index: 1;
 
-    width: 360px;
+    max-width: 360px;
 
     padding: 0;
     margin: 0;
@@ -16,7 +16,7 @@
 
 @media (max-width: 768px) {
     .cover__subtitle {
-        width: 260px;
+        max-width: 260px;
 
         font-size: 14px;
         line-height: 16px;
