--- a/blocks/cover/__title/cover__title.css
+++ b/blocks/cover/__title/cover__title.css
@@ -1,7 +1,7 @@
 .cover__title {
     z-index: 1;
 
-    width: 560px;
+    max-width: 560px;
 
     padding: 0;
     margin: 0 0 32px;
@@ -16,7 +16,7 @@
 
 @media (max-width: 768px) {
     .cover__title {
-        width: 230px;
+        max-width: 230px;
 
         font-size: 32px;
         line-height: 35px;
