--- a/blocks/lead/__subtitle/lead__subtitle.css
+++ b/blocks/lead/__subtitle/lead__subtitle.css
@@ -1,5 +1,5 @@
 .lead__subtitle {
-    width: 640px;
+    max-width: 640px;
 
     margin: 0 auto 64px;
     padding: 0;
@@ -12,21 +12,9 @@
     text-align: center;
 }
 
-@media (max-width: 1280px) {
-    .lead__subtitle {
-        
-    }
-}
-
-@media (max-width: 1024px) {
-    .lead__subtitle {
-        
-    }
-}
-
 @media (max-width: 768px) {
     .lead__subtitle {
-        width: 288px;
+        max-width: 288px;
 
         margin-bottom: 40px;
         
