--- a/blocks/place/__title/place__title.css
+++ b/blocks/place/__title/place__title.css
@@ -1,5 +1,5 @@
 .place__title {
-    width: 460px;
+    max-width: 460px;
 
     box-sizing: border-box;
 
@@ -14,7 +14,7 @@
 
 @media (max-width: 1024px) {
     .place__title {
-        width: 330px;
+        max-width: 330px;
         font-style: normal;
         font-weight: 900;
         font-size: 42px;
@@ -24,7 +24,7 @@
 
 @media (max-width: 768px) {
     .place__title {
-        width: 100%;
+        max-width: 100%;
         font-style: normal;
         font-weight: 900;
         font-size: 32px;
