--- a/styles/index.css
+++ b/styles/index.css
@@ -41,6 +41,7 @@
 @import url(../blocks/footer/__copyright/footer_copyright.css);
 @import url(../blocks/footer/__link/footer__link.css);
 @import url(../blocks/footer/__links/footer__links.css);
+@import url(../blocks/footer/__author/footer__author.css);
 
 @import url(../blocks/link/link.css);
 
