--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -4,7 +4,7 @@
     margin: 28px auto 56px;
     padding: 0 48px;
 
-    width: 1280px;
+    max-width: 1280px;
 
     display: flex;
     justify-content: space-between;
@@ -14,14 +14,14 @@
 
 }
 
-@media (max-width: 1280px) {
+@media (max-width: 1200px) {
     .header {
         width: 100%;
         margin-bottom: 48px;
     }
 }
 
-@media (max-width: 1024px) {
+@media (max-width: 1000px) {
     .header {
         width: 100%;
         padding: 0 24px;
@@ -29,10 +29,10 @@
     }
 }
 
-@media (max-width: 768px) {
+@media (max-width: 750px) {
     .header {
         width: 100%;
         padding: 0 16px;
-        margin-bottom: 48px;
+        margin: 16px auto 48px;
     }
 }
