--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -4,7 +4,7 @@
     padding: 0;
     margin: 0;
 
-    font-family: "Inter", sans-serif;
+    font-family: "Inter", "Arial", sans-serif;
     color: white;
     
     -webkit-font-smoothing: antialiased;
