--- a/blocks/photo-grid/photo-grid.css
+++ b/blocks/photo-grid/photo-grid.css
@@ -7,37 +7,39 @@
     grid-template-columns: repeat(4, 1fr);
     grid-auto-rows: max-content;
 
-    width: calc(100% - 48px * 2);
+    max-width: 1280px;
+    padding: 0 48px;
     margin: 0 auto 92px;
     /* padding: 0 48px; */
 }
 
-@media (max-width: 1280px) {
+@media (max-width: 1200px) {
     .photo-grid {
-        width: calc(100% - 48px * 2);
+        max-width: 100%;
 
         grid-template-columns: repeat(3, 1fr);
 
-        padding: 0;
         gap: 14px;
     }
 }
 
-@media (max-width: 1024px) {
+@media (max-width: 1000px) {
     .photo-grid {
-        width: calc(100% - 24px * 2);
-        padding: 0;
+        width: 100%;
+        padding: 0 24px;
         margin-bottom: 88px;
+
+        gap: 16px;
 
         grid-template-columns: repeat(2, 1fr);
     }
 }
 
-@media (max-width: 768px) {
+@media (max-width: 750px) {
     .photo-grid {
-        width: calc(100% - 16px * 2);
+        width: 100%;
         margin-bottom: 64px;
-        padding: 0;
+        padding: 0 16px;
 
         grid-template-columns: repeat(auto-fit, minmax(240px, 1fr));
 
