--- a/blocks/places/places.css
+++ b/blocks/places/places.css
@@ -3,30 +3,29 @@
     flex-direction: column;
     gap: 80px;
 
-    width: 1280px;
+    max-width: 1280px;
     margin: 0 auto 92px;
 
     align-items: center;
 }
 
-@media (max-width: 1280px) {
+@media (max-width: 1200px) {
     .places {
-        width: calc(100% - 48px * 2);
+        max-width: 100%;
+        margin: 0 48px 92px;
     }
 }
 
-@media (max-width: 1024px) {
+@media (max-width: 1000px) {
     .places {
-        width: calc(100% - 24px * 2);
+        margin: 0 24px 92px;
         gap: 73px;
-        margin: 0 auto 88px;
     }
 }
 
-@media (max-width: 768px) {
+@media (max-width: 750px) {
     .places {
-        width: 100%;
+        margin: 0 0 66px;
         gap: 50px;
-        margin: 0 auto 64px;
     }
 }
