--- a/pages/index.css
+++ b/pages/index.css
@@ -1,3 +1,7 @@
+@import url(../vendor/normalize.css);
+@import url(../vendor/fonts.css);
+
+
 @import url(../blocks/page/page.css);
 
 @import url(../blocks/header/header.css);
@@ -33,6 +37,7 @@
 @import url(../blocks/place/__paragraph/place__paragraph.css);
 
 @import url(../blocks/cover/cover.css);
+@import url(../blocks/cover/__link/cover__link.css);
 @import url(../blocks/cover/__overlay/cover__overlay.css);
 @import url(../blocks/cover/__subtitle/cover__subtitle.css);
 @import url(../blocks/cover/__title/cover__title.css);
@@ -45,23 +50,4 @@
 
 @import url(../blocks/link/link.css);
 
-
-
-@font-face {
-    src: url(../fonts/Inter-Regular.ttf) format("truetype");
-    font-family: 'Inter';
-    font-weight: 400;
-}
-
-@font-face {
-    src: url(../fonts/Inter-Bold.ttf) format("truetype");
-    font-family: 'Inter';
-    font-weight: 700;
-}
-
-@font-face {
-    src: url(../fonts/Inter-Black.ttf) format("truetype");
-    font-family: 'Inter';
-    font-weight: 900;
-}
 
