--- a/blocks/photo-grid/photo-grid.css
+++ b/blocks/photo-grid/photo-grid.css
@@ -39,7 +39,7 @@
         margin-bottom: 64px;
         padding: 0 16px;
 
-        grid-template-columns: repeat(auto-fit, minmax(240px, 1fr));
+        grid-template-columns: 1fr;
 
         gap: 12px;
     }
