--- a/blocks/place/__url-heading/place__url-heading.css
+++ b/blocks/place/__url-heading/place__url-heading.css
@@ -7,7 +7,8 @@
     letter-spacing: 2px;
 
     padding: 0;
-    margin: 0 0 12px;
+    margin: 0;
 
     color: #AAAAAA;
+    text-transform: uppercase;
 }
